  * Dropped libnova in favor of PyEphem for the backend to the lsl.astro module
  * Modified skymap.ProjectedSkyMap to not rely on the lsl.astro_array module
  * Removed the lsl.astro_array module
  * Removed the lsl.libnova module and the associated swig file
  * Updated the documentation to reflect the reduced dependencies

0.6.5
  * Fixed the time remaining computation in lsl.common.progress.ProgressBarPlus
  * Fixed a bug in imageIDI.py that caused the LST not to update on subsequent integrations
  * Added in a call to close() after numpy.load() is used
  * Updated the setup.py script to help deal with clang/OpenMP on OSX

0.6.4
  * Cleaned up the coherent part of the dedispersion module
  * Added a time estimating progress bar to lsl.common.progress
  * Fixed the data scaling in the SoftwareDP _processStreamFilter() function
  * Fixed the integration time stored in the FITS IDI files generated by correlateTBW.py
  * Added validation for the DR spectrometer channels/integration count/mode in an SDF
  * Fixed a couple of typos in the DR spectrometer reader that mixed the I-only and Q-only output modes
  * Fixed the 'fills' normalization in the DR spectrometer reader for the YX-only, YY-only, XX/YY, and XX/XY/YX/YY modes
  * Fixed the axis order in the SDFITS writer

0.6.3
  * Fixed a typo. in lsl.imaing.utils.pruneBaselineRange() function
  * Added normalization by the transform length to the lsl.reader._gofast module
  * Added back in the "import lsl; lsl.test()" fixture
  * Updated the plotUVcoverage.py script to work with all 260 stands
  * Fixed the data volume computation for lsl.common.sdf.Stepped observations
  * Updated the imageIDI.py script to work with either correlated TBW or TBN files
  * Reorganized the scripts to better handle metadata and removed the IOC scripts
  * Changed the default values of SESSION_LOG_SCH and SESSION_LOG_EXE in lsl.common.sdf to False
  * Fixed the lsl.common.sdf.Stepped class so that the step lists of independent