@@ -1,0 +1,92 @@
+#MHz	ReZ	ImZ	IME
+10	1.795	-597.1	0.00195699
+11	1.837	-532.9	0.00249632
+12	1.868	-478.5	0.00312193
+13	1.879	-431.6	0.00382187
+14	1.868	-390.5	0.00458778
+15	1.846	-354	0.00544187
+16	1.827	-321.3	0.00643296
+17	1.833	-291.5	0.00769019
+18	1.882	-264.3	0.00938251
+19	1.993	-239.2	0.0117895
+20	2.176	-215.8	0.0152676
+21	2.437	-193.8	0.0202864
+22	2.786	-173.1	0.0274967
+23	3.225	-153.5	0.0376998
+24	3.758	-134.8	0.0519478
+25	4.391	-116.8	0.0715738
+26	5.134	-99.47	0.0980359
+27	5.994	-82.68	0.132679
+28	6.991	-66.34	0.176451
+29	8.131	-50.36	0.228584
+30	9.437	-34.67	0.286437
+31	10.92	-19.22	0.344679
+32	12.61	-3.908	0.397282
+33	14.5	+11.26	0.438165
+34	16.64	+26.42	0.46536
+35	19.08	+41.55	0.479805
+36	21.8	+56.76	0.482917
+37	24.87	+72.06	0.478611
+38	28.38	+87.46	0.470439
+39	32.28	+103.1	0.459051
+40	36.67	+118.9	0.446978
+41	41.73	+135	0.435681
+42	47.42	+151.5	0.424483
+43	53.8	+168.2	0.414279
+44	61.21	+185.3	0.40587
+45	69.47	+202.8	0.397836
+46	78.92	+220.8	0.390862
+47	89.67	+239.1	0.385083
+48	102.3	+257.5	0.381604
+49	116.4	+276.4	0.377843
+50	132.4	+295.5	0.374726
+51	150.8	+314.6	0.372636
+52	172.1	+333.2	0.371986
+53	196	+351.6	0.371144
+54	223.2	+369	0.371043
+55	254	+385	0.371425
+56	288.7	+398.7	0.372457
+57	327.5	+408.4	0.374771
+58	370	+414.8	0.37663
+59	416.2	+415.6	0.379065
+60	465.2	+409.6	0.381919
+61	515.8	+395.5	0.385191
+62	565.5	+371.1	0.389593
+63	613.3	+338.1	0.393704
+64	656	+295.6	0.39823
+65	690.8	+244.7	0.403244
+66	715.6	+187.6	0.408682
+67	729.1	+127.1	0.41452
+68	730.8	+66.44	0.420821
+69	721.5	+8.46	0.427597
+70	702.8	-44.44	0.434859
+71	676.8	-90.62	0.44262
+72	644.5	-127.6	0.451835
+73	610.9	-158.7	0.460566
+74	575.9	-182.8	0.469876
+75	540.9	-200.5	0.479784
+76	506.9	-212.8	0.490219
+77	474.5	-220.6	0.501169
+78	444	-224.4	0.512863
+79	415.5	-225.2	0.525193
+80	389.2	-223.3	0.538351
+81	364.9	-219.5	0.552226
+82	342.7	-214.2	0.566763
+83	322.5	-207.7	0.58201
+84	304	-200.2	0.598142
+85	287.2	-192.1	0.614903
+86	271.9	-183.5	0.632392
+87	258	-174.5	0.650635
+88	245.3	-165.2	0.669655
+89	234.2	-155.6	0.689325
+90	223.8	-146.2	0.709233
+91	214.2	-136.6	0.729929
+92	205.6	-127	0.750911
+93	197.7	-117.4	0.772205
+94	190.6	-107.9	0.793416
+95	184.1	-98.36	0.814714
+96	178.3	-88.91	0.83556
+97	173.1	-79.52	0.855797
+98	168.4	-70.2	0.875185
+99	164.2	-60.96	0.89339
+100	160.5	-51.79	0.91009
